--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,8 @@ spring:
     url: jdbc:oracle:thin:@localhost:1521/orcl
     username: shop
     password: shop
-    driver-class-name: oracle.jdbc.driver.OracleDriver
-
+#    driver-class-name: oracle.jdbc.driver.OracleDriver - 9버전 이후로 이름 변경됨
+    driver-class-name: oracle.jdbc.OracleDriver
   jpa:
     hibernate:
       ddl-auto: create
