--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,8 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!--<dependency>
+		<!-- security 관련 설정 -->
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
@@ -73,7 +74,14 @@
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
-		</dependency>-->
+		</dependency>
+		<!-- end security -->
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+
 
 		<!-- 외부 라이브러리 추가 -->
 		<dependency>
