--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,14 +2,16 @@ server:
   port: 9777
 spring:
   datasource:
-    url: jdbc:oracle:thin:@localhost:1521/orcl
+#    url: jdbc:oracle:thin:@localhost:1521/orcl
+#    driver-class-name: oracle.jdbc.OracleDriver
+    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+    url: jdbc:log4jdbc:oracle:thin:@localhost:1521/ORCL
     username: shop
     password: shop
-#    driver-class-name: oracle.jdbc.driver.OracleDriver - 9버전 이후로 이름 변경됨
-    driver-class-name: oracle.jdbc.OracleDriver
+  #    driver-class-name: oracle.jdbc.driver.OracleDriver - 9버전 이후로 이름 변경됨
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
       # show_sql: true
