구매내역 까지 완료

--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,16 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+
+		<!-- https://mvnrepository.com/artifact/com.github.jknack/handlebars -->
+		<dependency>
+			<groupId>com.github.jknack</groupId>
+			<artifactId>handlebars</artifactId>
+			<version>4.0.6</version>
+		</dependency>
+
+
+	</dependencies>
 
 	<build>
 		<plugins>
