--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
   port: 9777
 spring:
+  messages:
+    basename: errors
+
   datasource:
 #    url: jdbc:oracle:thin:@localhost:1521/orcl
 #    driver-class-name: oracle.jdbc.OracleDriver
