오류 수정 시작

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -1,1 +1,8 @@
 conpanyNo=업체명은 필수 입니다.
+foodItemDto.itemName=상품 이름을 입력하세요
+
+NotBlank=입력 하세요.
+
+#추가
+typeMismatch.java.lang.Integer=숫자를 입력해 주세요.
+typeMismatch=타입 오류입니다.
