--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
 	</parent>
 	<groupId>com.aki</groupId>
 	<artifactId>goosinsa</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>goosinsa</name>
 	<description>Demo project for Spring Boot</description>
@@ -157,6 +156,11 @@
 		<dependency>
 			<groupId>com.oracle.ojdbc</groupId>
 			<artifactId>ojdbc8</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
 		</dependency>
 
 <!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-maven-plugin &ndash;&gt;-->
